Top and Side bar OK

--- a/frontendQCM/src/index.html
+++ b/frontendQCM/src/index.html
@@ -12,5 +12,6 @@
 </head>
 <body class="mat-typography">
   <app-root></app-root>
+  <script src="https://kit.fontawesome.com/c08eeea9ae.js" crossorigin="anonymous"></script>
 </body>
 </html>
